# thrsh

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  main.py  rustfmt.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
libs/thrsh_math/: Cargo.toml
libs/thrsh_math/src/: lib.rs
programs/thrsh_core/: Cargo.toml
programs/thrsh_core/src/: contexts.rs  errors.rs  events.rs  lib.rs  state.rs
sdk/: jest.config.js  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  types.ts  utils.ts
sdk/tests/: thrsh.test.ts
