[package]
name = "thrsh-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for the thrsh arbitrage scanner"
license = "MIT"

[[bin]]
name = "thrsh"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
solana-client = "1.18"
solana-sdk = "1.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thrsh-math = { path = "../libs/thrsh_math" }
