[package]
name = "thrsh-core"
version = "0.1.0"
edition = "2021"
description = "Cross-market prediction market arbitrage engine"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "thrsh_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
thrsh-math = { path = "../../libs/thrsh_math" }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
